...
            activeIcon: Icon(Icons.groups),
            label: 'Komunitas',
          ),
          const BottomNavigationBarItem(
            icon: Icon(Icons.school_outlined),
            activeIcon: Icon(Icons.school),
            label: 'Panduan',
          ),

          BottomNavigationBarItem(
            icon: Consumer<ChatProvider>(
              builder: (context, chatProv, child) {
                return Badge(
...
