...
                ),
                const SizedBox(height: 40),
                _buildOption(index, 'Tidak Benar', 0),
                const SizedBox(height: 12),
                _buildOption(index, 'Agak Benar', 1),
                const SizedBox(height: 12),
                _buildOption(index, 'Benar', 2),
              ],
            ),
          );
        },
      ),
    );
...
